--- a/audio-player/style.css
+++ b/audio-player/style.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400&family=Roboto:wght@100;300;500;900&display=swap');
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 body{
   font-family: 'Inter', sans-serif;
   padding: 0;
   margin: 0;
+  color: white;
 }
 .background-img{
   position: absolute;
@@ -21,14 +22,14 @@ body{
 }
 .container{
   width: 350px;
-  height: 500px;
+  height: 550px;
   padding-top: 70px;
   margin: 0 auto;
 }
 .music-block{
   margin: 0 auto;
   width: 350px;
-  height: 500px;
+  height: 550px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -168,7 +169,15 @@ input[type=range]:focus::-ms-fill-lower {
 input[type=range]:focus::-ms-fill-upper {
   background: #ffffff;
 }
+.timing{
+  display: flex;
+  justify-content: space-between;
+}
+.currentTime, .durationTime{
+  font-size: smaller;
+}
 .footer{
+  padding-top: 15px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -185,4 +194,30 @@ a img{
 a img:hover{
   opacity: 50%;
   transition: 0.3s;
+}
+
+.first{
+  /* display: none; */
+}
+.second{
+  display: none;
+}
+.third{
+  display: none;
+}
+
+#background-first{
+  /* display: none; */
+}
+#background-second{
+  display: none;
+}
+#background-third{
+  display: none;
+}
+#pause{
+  display: none;
+}
+.audio-control img{
+  cursor: pointer;
 }
